--- a/src/components/postsBody/postsBody.css
+++ b/src/components/postsBody/postsBody.css
@@ -6,6 +6,7 @@
     display: flex; /* Enables posts to align vertically*/
     flex-direction: column; 
 
+    min-height: 100vh !important;
     width: 100%; 
     min-width: 320px;             /* Prevents shrinking too small */
     max-width: calc(100% - 26vw); /* Adjusts max-width based on sidebar (which has width of 25+1vw)  */
@@ -234,3 +235,64 @@
     height: auto;
 }
 
+
+/******************************************************************************************/
+/**************** Error message notices ***************************************************/
+/******************************************************************************************/
+
+.posts-error-notice { /* notice when subreddit's posts are filtered by search and not results show */
+
+  display: flex; /* display and positioning */
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 110px auto auto auto;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+
+  width: 80%; /* container dimensions/shape */
+  max-width: 400px;
+  padding: 1.75rem 0.75rem;
+
+  background-color:#f8f8f8;
+
+  border-radius: 10px; /* border styling */
+  border: 1px solid #bbbbbb;
+  box-shadow: 0px 0px 6px 5px rgba(77, 79, 80, 0.7);
+}
+
+.posts-error-notice > span { /* width space taken by <span> */
+    width: 90%;
+}
+
+@media screen and (max-width:380px) {
+  .posts-error-notice {
+     font-size: 1rem;
+  }
+}
+
+/******************************************************************************************/
+/**************** React Spinner/Loader styling ********************************************/
+/******************************************************************************************/
+
+.loader-notice { /* Notice when posts are loading (contains 'pulse' loader)*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 110px auto auto auto;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.25rem;
+
+    width: 80%; /* container dimensions/shape */
+    max-width: 400px;
+    padding: 1.75rem 0.75rem;
+
+    background-color:#f8f8f8;
+
+    border-radius: 10px; /* border styling */
+    border: 1px solid #bbbbbb;
+    box-shadow: 0px 0px 6px 5px rgba(77, 79, 80, 0.7);
+}
