--- a/src/components/subredditsMenu/subredditsMenu.css
+++ b/src/components/subredditsMenu/subredditsMenu.css
@@ -122,7 +122,33 @@
 .subReddits-error-notice { /* Basic styling for Error notice container */
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    margin: clamp(5vh, 7vw, 20vh) auto auto auto;
+
+    width: 94% !important;
+    height: auto;
+
+    background: #e9e9e9;
+    border: 1px solid #e9e9e9;
+    border-radius: 25px;
+}
+
+.subReddits-error-notice > h2 {
+    text-align: center;
+}
+
+.subReddits-error-notice > span {
+    text-align: center;
+    padding: 0rem 1.5rem 1rem;
+}
+
+.subReddits-loading-notice {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: clamp(5vh, 7vw, 20vh) auto auto auto;
     width: 94%;
-    border: 1px solid #bbbbbb;
 }
 
